fix: sidebar_overflow

--- a/public/style/chat.css
+++ b/public/style/chat.css
@@ -91,5 +91,7 @@
 }
 
 .chat-message-time {
-  min-width: 7.5rem;
+  display: flex;
+  justify-content: flex-end;
+  min-width: 9.5rem;
 }
